# forminv

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ERRATA.md  LICENSE  LICENSE_DATA  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: all_8models_results.json  all_models_103_results.json  all_models_results_v2.json  balanced_eval_full.json  balanced_eval_pilot.json  balanced_eval_subtle_full.json  balanced_eval_subtle_pilot.json  bimodal_ig_values.json  cir_rigorous.json  cir_rigorous_103.json  claude_103_8family_results.json  conditional_inconsistency.json  cross_benchmark_logiqa_results.json  cross_benchmark_results.json  external_audit_raw.json  false_controls_all_models.json  false_controls_pilot_results.json  fleiss_kappa.json  gate_check_real.json  leave_one_out_audit.json  mathcheck_129_results.json  mathcheck_129_results_summary.json  mathcheck_audit_raw.json  mathcheck_ranking_results.json  mprobe_raw.jsonl  mprobe_results.json  multisample_cir.json  multisample_cir_multimodel.json  multisample_cir_pilot.json  ntp100_all_models_results.json  reasoning_models_103.json  reasoning_models_results.json  scr_decomposition.json  smoke_gate_check.json  v3_eval_5models.json
configs/: gate_check.yaml  v3_run.yaml
data/splits/: formInv_v1_split_registry.json
docs/: DATASET_CARD.md  DATASHEET.md  REPRODUCING.md
forminv/: __init__.py  cli.py  schemas.py  selector.py
forminv/eval/: __init__.py  analyze.py  (+3 more)
hf_release/: README.md
lean_proofs/: FormInvCertificates.lean  test2.lean  test_proofs.lean
paper/: main.tex  refs.bib
scripts/: README.md  analyze_v3.py  balanced_eval.py  bootstrap_ig_stability.py  build_dataset_v3.py  build_hf_dataset.py  build_human_baseline_sample.py  cir_rigorous.py  compute_fleiss_kappa.py  conditional_inconsistency.py  convert_ntp_to_formInv.py  cross_benchmark_eval.py  download_ntp_mathlib.py  extract_ntp_mathlib.py  gate_check.py  generate_figures.py  generate_ntp_paraphrases.py  leave_one_out_audit.py  multisample_cir.py  multisample_cir_multimodel.py  run_103_all_models.py  run_103_gemini_fix.py  run_all_models.py  run_cross_benchmark_folio.py  run_cross_benchmark_logiqa.py  run_eval_v3.py  run_external_audit.py  run_false_controls_all_models.py  run_false_controls_pilot.py  run_mathcheck_audit.py  run_mathcheck_ranking.py  run_mathcheck_ranking_129.py  run_mprobe.py  scr_decomposition.py  verify_false_siblings.py  write_cross_benchmark_summary.py
tests/: test_metrics.py  test_providers.py  test_schemas.py
(+16 files in other folders)
